2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.js:
	* EditLane.aspx.cs: Added support for per-command timeout
	  instead of having a 60-minute timeout for all commands.

2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Fix c&p error.

2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Augment ViewHtmlReport to fix both
	  images and links.

	* ViewLane.aspx.cs: Comment out cwl.

	* ReportCommit.aspx.cs: Add some checks here.

2009-03-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ChangeLog: Added.

	* ViewWorkTable.aspx.cs: Fix this page.
